--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
-  <link rel="shortcut icon" href="/images/apple-touch-icon.png" type="image/x-icon">
+  <link rel="icon" href="/images/apple-touch-icon.png" type="image/x-icon">
   <title>Intro</title>
 </head>
 <body>
